# pygerber_gerber_parser_cpp

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  __build__.py  build-debug.bat  build-debug.sh  build-release.bat  build-release.sh  build.bat  build.py  main.py  pyproject.toml
.github/workflows/: multiplatform_build.yaml
cpp/gerber/include/gerber/: errors.hpp  gerber.hpp  parser.hpp
cpp/gerber/include/gerber/ast/: ast.hpp  command.hpp  enums.hpp  extended_command.hpp  file.hpp  node.hpp
cpp/gerber/include/gerber/ast/aperture/: AD.hpp  ADC.hpp  ADO.hpp  ADP.hpp  ADR.hpp  AM.hpp  AMclose.hpp  AMopen.hpp
cpp/gerber/include/gerber/ast/d_codes/: D01.hpp  D02.hpp  D03.hpp  Dnn.hpp
cpp/gerber/include/gerber/ast/g_codes/: G01.hpp  G02.hpp  G03.hpp  G04.hpp  G36.hpp  G37.hpp  G54.hpp  G55.hpp  G70.hpp  G71.hpp  G74.hpp  G75.hpp  G90.hpp  G91.hpp
cpp/gerber/include/gerber/ast/load/: LP.hpp
cpp/gerber/include/gerber/ast/m_codes/: M02.hpp
cpp/gerber/include/gerber/ast/other/: coordinate.hpp  coordinate_i.hpp  coordinate_j.hpp  coordinate_x.hpp  coordinate_y.hpp
cpp/gerber/include/gerber/ast/properties/: FS.hpp  MO.hpp
cpp/gerber/src/: errors.cpp  gerber.cpp  parser.cpp
cpp/gerber/src/ast/: command.cpp  enums.cpp  extended_command.cpp  file.cpp  node.cpp
cpp/gerber/src/ast/aperture/: AD.cpp  ADC.cpp  ADO.cpp  ADP.cpp  ADR.cpp  AM.cpp  AMclose.cpp  AMopen.cpp
cpp/gerber/src/ast/d_codes/: D01.cpp  D02.cpp  D03.cpp  Dnn.cpp
cpp/gerber/src/ast/g_codes/: G01.cpp  G02.cpp  G03.cpp  G04.cpp  G36.cpp  G37.cpp  G54.cpp  G55.cpp  G70.cpp  G71.cpp  G74.cpp  G75.cpp  G90.cpp  G91.cpp
cpp/gerber/src/ast/load/: LP.cpp
cpp/gerber/src/ast/m_codes/: M02.cpp
cpp/gerber/src/ast/other/: coordinate.cpp  coordinate_i.cpp  coordinate_j.cpp  coordinate_x.cpp  coordinate_y.cpp
cpp/gerber/src/ast/properties/: FS.cpp  MO.cpp
cpp/python/: gerber_parser.cpp
cpp/src/: GerberParserCppModule.cxx  PythonModule.cpp  main.cpp
cpp/test/: main.test.cpp  multi_node.test.cpp  single_node.test.cpp
python/pygerber_gerber_parser_cpp/: gerber_parser.pyi
python/test/: test_gerber_parser.py
